@@ -549,6 +549,100 @@ class YouTube(LoginClient):
 
         return _perform(_page_token=page_token, _offset=offset, _result=result)
 
+    def clear_watch_history(self):
+        _post_data = {
+            'context': {
+                'client': {
+                    'clientName': 'TVHTML5',
+                    'clientVersion': '5.20150304',
+                    'theme': 'CLASSIC',
+                    'acceptRegion': '%s' % self._region,
+                    'acceptLanguage': '%s' % self._language.replace('_', '-')
+                },
+                'user': {
+                    'enableSafetyMode': False
+                }
+            }
+        }
+        _json_data = self._perform_v1_tv_request(method='POST', path='history/clear_watch_history', post_data=_post_data)
+        return _json_data
+
+    def get_watch_history(self, page_token=None, offset=0):
+        if not page_token:
+            page_token = ''
+
+        result = {'items': [],
+                  'next_page_token': page_token,
+                  'offset': offset}
+
+        def _perform(_page_token, _offset, _result):
+            _post_data = {
+                'context': {
+                    'client': {
+                        'clientName': 'TVHTML5',
+                        'clientVersion': '5.20150304',
+                        'theme': 'CLASSIC',
+                        'acceptRegion': '%s' % self._region,
+                        'acceptLanguage': '%s' % self._language.replace('_', '-')
+                    },
+                    'user': {
+                        'enableSafetyMode': False
+                    }
+                },
+                'browseId': 'FEhistory'
+            }
+            if _page_token:
+                _post_data['continuation'] = _page_token
+
+            _json_data = self._perform_v1_tv_request(method='POST', path='browse', post_data=_post_data)
+            _data = _json_data.get('contents', {}).get('sectionListRenderer', {}).get('contents', [{}])[0].get(
+                'shelfRenderer', {}).get('content', {}).get('horizontalListRenderer', {})
+            if not _data:
+                _data = _json_data.get('continuationContents', {}).get('horizontalListContinuation', {})
+            _items = _data.get('items', [])
+            if not _result:
+                _result = {'items': []}
+
+            _new_offset = self._max_results - len(_result['items']) + _offset
+            if _offset > 0:
+                _items = _items[_offset:]
+            _result['offset'] = _new_offset
+
+            for _item in _items:
+                _item = _item.get('gridVideoRenderer', {})
+                if _item:
+                    _video_item = {'id': _item['videoId'],
+                                   'title': _item.get('title', {}).get('runs', [{}])[0].get('text', ''),
+                                   'channel': _item.get('shortBylineText', {}).get('runs', [{}])[0].get('text', '')}
+                    _result['items'].append(_video_item)
+
+            _continuations = _data.get('continuations', [{}])[0].get('nextContinuationData', {}).get('continuation', '')
+            if _continuations and len(_result['items']) <= self._max_results:
+                _result['next_page_token'] = _continuations
+
+                if len(_result['items']) < self._max_results:
+                    _result = _perform(_page_token=_continuations, _offset=0, _result=_result)
+
+            # trim result
+            if len(_result['items']) > self._max_results:
+                _items = _result['items']
+                _items = _items[:self._max_results]
+                _result['items'] = _items
+                _result['continue'] = True
+
+            if len(_result['items']) < self._max_results:
+                if 'continue' in _result:
+                    del _result['continue']
+
+                if 'next_page_token' in _result:
+                    del _result['next_page_token']
+
+                if 'offset' in _result:
+                    del _result['offset']
+            return _result
+
+        return _perform(_page_token=page_token, _offset=offset, _result=result)
+
     def get_watch_later_id(self):
         watch_later_id = ''
 
