@@ -3,6 +3,7 @@ __author__ = 'bromix'
 from ... import kodion
 from ...youtube.helper import utils
 from ...kodion.items.video_item import VideoItem
+import yt_context_menu
 
 
 def my_subscriptions_to_items(provider, context, json_data, do_filter=False):
@@ -37,6 +38,48 @@ def my_subscriptions_to_items(provider, context, json_data, do_filter=False):
             result.append(video_item)
 
             video_id_dict[video_id] = video_item
+
+    channel_item_dict = {}
+    utils.update_video_infos(provider, context, video_id_dict, channel_items_dict=channel_item_dict)
+    utils.update_fanarts(provider, context, channel_item_dict)
+
+    # next page
+    next_page_token = json_data.get('next_page_token', '')
+    if next_page_token or json_data.get('continue', False):
+        new_params = {}
+        new_params.update(context.get_params())
+        new_params['next_page_token'] = next_page_token
+        new_params['offset'] = int(json_data.get('offset', 0))
+
+        new_context = context.clone(new_params=new_params)
+
+        current_page = int(new_context.get_param('page', 1))
+        next_page_item = kodion.items.NextPageItem(new_context, current_page, fanart=provider.get_fanart(new_context))
+        result.append(next_page_item)
+
+    return result
+
+
+def watch_history_to_items(provider, context, json_data):
+    result = []
+    video_id_dict = {}
+
+    incognito = str(context.get_param('incognito', False)).lower() == 'true'
+
+    items = json_data.get('items', [])
+    for item in items:
+        video_id = item['id']
+        item_params = {'video_id': video_id}
+        if incognito:
+            item_params.update({'incognito': incognito})
+        item_uri = context.create_uri(['play'], item_params)
+        video_item = VideoItem(item['title'], uri=item_uri)
+        if incognito:
+            video_item.set_play_count(0)
+
+        result.append(video_item)
+
+        video_id_dict[video_id] = video_item
 
     channel_item_dict = {}
     utils.update_video_infos(provider, context, video_id_dict, channel_items_dict=channel_item_dict)
